# linorobot2_hardware

./: .gitignore  README.md  platformio.ini
.github/: mergify.yml  parse_platformio.py
.github/actions/platformio-env/: action.yml
.github/workflows/: ci-pio.yml  foxy-firmware-build.yml  galactic-firmware-build.yml  humble-firmware-build.yml  reusable-platformio-ci.yml  rolling-firmware-build.yml
adc_calibrate/: platformio.ini
adc_calibrate/src/: firmware.cpp
calibration/: README.md  platformio.ini
calibration/src/: firmware.cpp  firmware.ino
config/: config.h  lino_base_config.h
config/custom/: beebo_config.h  beebo_m_config.h  dev_config.h  esp32_config.h  esp32meca_config.h  esp32s2_config.h  esp32s3_config.h  esp32tank_config.h  gbot_config.h  gendrv_config.h  hex_config.h  pico_config.h  square_config.h  vattenkar_config.h
firmware/: README.md  platformio.ini
firmware/lib/battery/: battery.cpp  battery.h
firmware/lib/encoder/: encoder.cpp  encoder.h
firmware/lib/imu/: AK09918.cpp  AK09918.h  Adafruit_ICM20649.cpp  Adafruit_ICM20649.h  Adafruit_ICM20948.cpp  Adafruit_ICM20948.h  Adafruit_ICM20X.cpp  Adafruit_ICM20X.h  I2Cdev.cpp  MPU6050.h  MPU9150.h  MPU9250.cpp  MPU9250.h  QMC5883L.cpp  QMC5883L.h  QMI8658.cpp  QMI8658.h  QMI8658reg.h  default_imu.h  default_mag.h  helper_3dmath.h  imu.h  imu_interface.h  mag.h  mag_interface.h
firmware/lib/kinematics/: kinematics.cpp  kinematics.h
firmware/lib/lidar/: lidar.cpp  lidar.h
firmware/lib/motor/: default_motor.h  motor.h  motor_interface.h
firmware/lib/odometry/: odometry.cpp  odometry.h
firmware/lib/pid/: pid.cpp  pid.h
firmware/lib/range/: range.cpp  range.h
firmware/lib/rosidl_typesupport_introspection_c/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosidl_typesupport_introspection_c-extras.cmake.in
firmware/lib/rosidl_typesupport_introspection_c/cmake/: rosidl_typesupport_introspection_c_generate_interfaces.cmake
firmware/lib/rosidl_typesupport_introspection_c/resource/: idl__rosidl_typesupport_introspection_c.h.em  idl__type_support.c.em  msg__rosidl_typesupport_introspection_c.h.em  msg__type_support.c.em  rosidl_typesupport_introspection_c__visibility_control.h.in  srv__rosidl_typesupport_introspection_c.h.em  srv__type_support.c.em
firmware/lib/rosidl_typesupport_introspection_c/src/: identifier.c
firmware/lib/syslog/: syslog.cpp  syslog.h
firmware/lib/velocity_smoother/: velocity_smoother.h
firmware/lib/wifi/: ota.cpp  ota.h  wifis.cpp  wifis.h
firmware/src/: firmware.cpp  firmware.ino
firmware/test/desktop/test_pid/: test_pid.cpp
firmware/test/embedded/motors/test_motor_1in/: test_motor_1in.cpp
firmware/test/embedded/motors/test_motor_2in/: test_motor_2in.cpp
firmware/test/embedded/test_pid/: test_pid.cpp
lib/config/: lino_base_config.h
lib/encoder/: encoder.cpp  encoder.h
lib/imu/: default_imu.h  imu_interface.h
lib/kinematics/: kinematics.cpp  kinematics.h
lib/motor/: default_motor.h  motor.cpp  motor.h  motor_interface.h
lib/odometry/: odometry.cpp  odometry.h
lib/pid/: pid.cpp
src/: firmware.ino
test_motors/: platformio.ini
test_motors/src/: firmware.ino
test_sensors/src/: firmware.ino
